--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <textarea class="form" name="forma" cols="15" rows="5" required="required" placeholder="Type your message here...*"></textarea>
                     <input type="button" class="submit bg-color-gradient" name="forma" value="SUBMIT"/>
                 </form>
-                <ul class="menu" data-aos="zoom-in-down">
+                <ul class="menu">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="#profile">Profile</a></li>
                     <li><a href="#skills">Skills</a></li>
