--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
         <!-- Start section intro -->
         <section id="intro" class="bg-color-dark">
         <div class="centrira d-flex space-around align-items"> 
-            <div class="me"data-aos="fade-right" data-aos-offset="300"
-            data-aos-easing="ease-in-sine"><img src="assets/img/ja.jpg" alt="autor" /></div>
-            <div class="text" data-aos="fade-left"  data-aos-offset="300"
-            data-aos-easing="ease-in-sine"><h2>Maričić Ivana</h2><p>Web developer</p></div>
+            <div class="me"><img src="assets/img/ja.jpg" alt="autor" /></div>
+            <div class="text"><h2>Maričić Ivana</h2><p>Web developer</p></div>
         </div>
     </section>
     <!-- End section intro -->
