--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="heading" data-aos="zoom-in">
                 <h2>Profile</h2> </div>
                 <div class="profil fs-20 centrira" data-aos="zoom-in">
-                <p>Hello! My name is Ivana Maričić (40/20), I am a web developer stationed in Serbia, curently studying at ICT College.I have a lot of positive team spirit and with good people in the team I progress and learn quickly.hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
+                <p>Hello! My name is Ivana Maričić (40/20), I am a web developer stationed in Serbia, curently studying at ICT College.I have a lot of positive team spirit and with good people in the team I progress and learn quickly.</p>
             </div>
         </section>
         <!-- End section profile -->
