--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <!-- End section intro -->
         <!-- Start section profile -->
         <section id="profile" class="c-white bg-color-gradient">
-            <div class="heading" data-aos="zoom-in">
-                <h2>Profile</h2> </div>
+            <div class="heading">
+                <h2>Profile</h2></div>
                 <div class="profil fs-20 centrira" data-aos="zoom-in">
                 <p>Hello! My name is Ivana Maričić (40/20), I am a web developer stationed in Serbia, curently studying at ICT College.I have a lot of positive team spirit and with good people in the team I progress and learn quickly.I am a highly competent IT professional with a proven track record in designing websites, networking and managing databases. I have strong technical skills as well as excellent interpersonal skills, enabling me to interact with a wide range of clients.</p>
             </div>
