--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="heading">
                 <h2>Profile</h2></div>
                 <div class="profil fs-20 centrira" data-aos="zoom-in">
-                <p>Hello! My name is Ivana Maričić (40/20), I am 20 years old, born and raised in Smederevska Palanka, Serbia. I graduated from "Palanacka Gimnazija", curently studying at ICT College.I have a lot of positive team spirit and with good people in the team I progress and learn quickly. My dream has always been to learn web programming and website development, while studying this school I hope that I will fulfill that dream and improve my skills so that I can always implement the wishes of my clients.</p>
+                <p>Hello! My name is Ivana Maričić (40/20), I am 20 years old. I was born and raised in Smederevska Palanka, Serbia. I graduated from "Palanacka Gimnazija", curently studying at ICT College. I have a lot of positive team spirit and with good people in the team I progress and learn quickly. My dream has always been to learn web programming and website development. I hope that during my studies at this school I will fulfill that dream and improve my skills so that I can always implement the wishes of my clients.</p>
             </div>
         </section>
         <!-- End section profile -->
