--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="project centrira d-flex space-around">
                 <div class="site" data-aos="zoom-in-up">
-                    <a href="https://ivana-maricic.github.io/Cixs-photography/index.html"><img src="assets/img/cixs.png" alt="cixsphotography"/></a>
+                    <a href="https://ivana-maricic.github.io/Cixs-photography/index.html" target="_blank"><img src="assets/img/cixs.png" alt="cixsphotography"/></a>
                     <p>STATIC NON-RESPONSIVE SITE</p>
                     <p>Used: HTML5, CSS3</p>
                 </div>
