--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p>Used: HTML5, CSS3</p>
                 </div>
                 <div class="site" data-aos="zoom-in-up">
-                    <a href="#"><img src="assets/img/portfolio.png" alt="portfoliosite"/></a>
+                    <a href="https://ivana-maricic.github.io/CIXPORTFOLIO/index.html"><img src="assets/img/portfolio.png" alt="portfoliosite"/></a>
                     <p>STATIC RESPONSIVE SITE</p>
                     <p>Used: HTML5, CSS3</p>
                 </div>
